--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,143 +151,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.utils import to_categorical\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.3005 - accuracy: 0.9127\n",
+      "Epoch 2/10\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.1304 - accuracy: 0.9623\n",
+      "Epoch 3/10\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.0890 - accuracy: 0.9732\n",
+      "Epoch 4/10\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0667 - accuracy: 0.9802\n",
+      "Epoch 5/10\n",
+      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0516 - accuracy: 0.9844\n",
+      "Epoch 6/10\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0416 - accuracy: 0.9874\n",
+      "Epoch 7/10\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0328 - accuracy: 0.9907\n",
+      "Epoch 8/10\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0258 - accuracy: 0.9923\n",
+      "Epoch 9/10\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0213 - accuracy: 0.9936\n",
+      "Epoch 10/10\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0180 - accuracy: 0.9943\n",
+      "1313/1313 [==============================] - 1s 836us/step - loss: 0.0141 - accuracy: 0.9963\n",
+      "Precisión: 99.63%\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "# Divide el conjunto de datos en características (X) y etiquetas (y)\n",
-    "X = df.iloc[:, 1:].values\n",
-    "y = df.iloc[:, 0].values\n",
+    "# Cargar los datos desde el archivo CSV\n",
+    "data = pd.read_csv(\"train.csv\")\n",
     "\n",
-    "# Normaliza las características en el rango [0, 1]\n",
+    "# Dividir los datos en características (X) y etiquetas (y)\n",
+    "X = data.iloc[:, 1:].values\n",
+    "y = data.iloc[:, 0].values\n",
+    "\n",
+    "# Normalizar los valores de los píxeles al rango [0, 1]\n",
     "X = X / 255.0\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(28000, 28, 28, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Normalize the data\n",
-    "df = df / 255.0\n",
+    "# Codificar las etiquetas en un formato one-hot\n",
+    "y_one_hot = to_categorical(y)\n",
     "\n",
-    "# If you need to reshape the data, you can use the numpy library\n",
-    "import numpy as np\n",
+    "# Crear la red neuronal\n",
+    "model = Sequential()\n",
+    "model.add(Dense(128, input_dim=784, activation='relu'))\n",
+    "model.add(Dense(10, activation='softmax'))\n",
     "\n",
-    "# Reshape the data into a (number of samples, height, width, channels) shape\n",
-    "data_reshaped = np.reshape(df.values, (-1, 28, 28, 1))\n",
+    "# Compilar el modelo\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "\n",
-    "print(data_reshaped.shape) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rebec\\AppData\\Local\\Temp\\ipykernel_17504\\2413757825.py:1: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,298,299,300,301,302,303,304,305,306,307,308,309,310,311,312,313,314,315,316,317,318,319,320,321,322,323,324,325,326,327,328,329,330,331,332,333,334,335,336,337,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365,366,367,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386,387,388,389,390,391,392,393,394,395,396,397,398,399,400,401,402,403,404,405,406,407,408,409,410,411,412,413,414,415,416,417,418,419,420,421,422,423,424,425,426,427,428,429,430,431,432,433,434,435,436,437,438,439,440,441,442,443,444,445,446,447,448,449,450,451,452,453,454,455,456,457,458,459,460,461,462,463,464,465,466,467,468,469,470,471,472,473,474,475,476,477,478,479,480,481,482,483,484,485,486,487,488,489,490,491,492,493,494,495,496,497,498,499,500,501,502,503,504,505,506,507,508,509,510,511,512,513,514,515,516,517,518,519,520,521,522,523,524,525,526,527,528,529,530,531,532,533,534,535,536,537,538,539,540,541,542,543,544,545,546,547,548,549,550,551,552,553,554,555,556,557,558,559,560,561,562,563,564,565,566,567,568,569,570,571,572,573,574,575,576,577,578,579,580,581,582,583,584,585,586,587,588,589,590,591,592,593,594,595,596,597,598,599,600,601,602,603,604,605,606,607,608,609,610,611,612,613,614,615,616,617,618,619,620,621,622,623,624,625,626,627,628,629,630,631,632,633,634,635,636,637,638,639,640,641,642,643,644,645,646,647,648,649,650,651,652,653,654,655,656,657,658,659,660,661,662,663,664,665,666,667,668,669,670,671,672,673,674,675,676,677,678,679,680,681,682,683,684,685,686,687,688,689,690,691,692,693,694,695,696,697,698,699,700,701,702,703,704,705,706,707,708,709,710,711,712,713,714,715,716,717,718,719,720,721,722,723,724,725,726,727,728,729,730,731,732,733,734,735,736,737,738,739,740,741,742,743,744,745,746,747,748,749,750,751,752,753,754,755,756,757,758,759,760,761,762,763,764,765,766,767,768,769,770,771,772,773,774,775,776,777,778,779,780,781,782,783) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"test.csv\", header=None)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"test.csv\", header=None)\n",
-    "# Codifica las etiquetas en formato one-hot\n",
-    "encoder = OneHotEncoder()\n",
-    "y = encoder.fit_transform(y.reshape(-1, 1)).toarray()\n",
+    "# Entrenar el modelo\n",
+    "model.fit(X, y_one_hot, epochs=10, batch_size=32)\n",
     "\n",
-    "# Divide el conjunto de datos en conjuntos de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Construye el modelo de redes neuronales\n",
-    "model = keras.Sequential([\n",
-    "    layers.Dense(128, activation=\"relu\", input_shape=(784,)),\n",
-    "    layers.Dense(64, activation=\"relu\"),\n",
-    "    layers.Dense(10, activation=\"softmax\")\n",
-    "])\n",
-    "\n",
-    "# Compila el modelo\n",
-    "model.compile(optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of X_train: (22400, 783)\n",
-      "Shape of X_test: (5600, 783)\n",
-      "Shape of Y_train: (22400, 1)\n",
-      "Shape of Y_test: (5600, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train = X_train.reshape(X_train.shape[0], -1)\n",
-    "X_test = X_test.reshape(X_test.shape[0], -1)\n",
-    "\n",
-    "# Verify the new shape of the data\n",
-    "print(\"Shape of X_train:\", X_train.shape)\n",
-    "print(\"Shape of X_test:\", X_test.shape)\n",
-    "\n",
-    "print(\"Shape of Y_train:\", y_train.shape)\n",
-    "print(\"Shape of Y_test:\", y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "in user code:\n\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1338, in train_function  *\n        return step_function(self, iterator)\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1322, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1303, in run_step  **\n        outputs = model.train_step(data)\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1080, in train_step\n        y_pred = self(x, training=True)\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential_7\" is incompatible with the layer: expected shape=(None, 784), found shape=(32, 783)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[69], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Entrena el modelo\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m history \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mfit(X_train, y_train, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, batch_size\u001b[39m=\u001b[39;49m\u001b[39m32\u001b[39;49m, validation_data\u001b[39m=\u001b[39;49m(X_test, y_test))\n\u001b[0;32m      4\u001b[0m \u001b[39m# Evalúa el modelo\u001b[39;00m\n\u001b[0;32m      5\u001b[0m loss, accuracy \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mevaluate(X_test, y_test)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_filewdzrndky.py:15\u001b[0m, in \u001b[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__train_function\u001b[1;34m(iterator)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m     retval_ \u001b[39m=\u001b[39m ag__\u001b[39m.\u001b[39mconverted_call(ag__\u001b[39m.\u001b[39mld(step_function), (ag__\u001b[39m.\u001b[39mld(\u001b[39mself\u001b[39m), ag__\u001b[39m.\u001b[39mld(iterator)), \u001b[39mNone\u001b[39;00m, fscope)\n\u001b[0;32m     16\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: in user code:\n\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1338, in train_function  *\n        return step_function(self, iterator)\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1322, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1303, in run_step  **\n        outputs = model.train_step(data)\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\training.py\", line 1080, in train_step\n        y_pred = self(x, training=True)\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"C:\\Users\\rebec\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential_7\" is incompatible with the layer: expected shape=(None, 784), found shape=(32, 783)\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Entrena el modelo\n",
-    "history = model.fit(X_train, y_train, epochs=1, batch_size=32, validation_data=(X_test, y_test))\n",
-    "\n",
-    "# Evalúa el modelo\n",
-    "loss, accuracy = model.evaluate(X_test, y_test)\n",
-    "print(f\"Loss: {loss}, Accuracy: {accuracy}\")\n",
-    "\n",
-    "\n"
+    "# Evaluar la precisión del modelo en los datos de entrenamiento\n",
+    "loss, accuracy = model.evaluate(X, y_one_hot)\n",
+    "print(f\"Precisión: {accuracy*100:.2f}%\")"
    ]
   }
  ],
