--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Ejercicio 1\n",
-    "Haga un análisis exploratorio de los datos para entenderlos mejor, documente todos los análisis"
+    "## Haga un análisis exploratorio de los datos para entenderlos mejor, documente todos los análisis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -146,12 +146,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Haga un modelo de redes neuronales simple, determine la efectividad del modelo"
+    "## Haga un modelo de redes neuronales simple, determine la efectividad del modelo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +160,14 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras.utils import to_categorical\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -173,27 +175,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.3005 - accuracy: 0.9127\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.2949 - accuracy: 0.9160\n",
       "Epoch 2/10\n",
-      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.1304 - accuracy: 0.9623\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.1276 - accuracy: 0.9626\n",
       "Epoch 3/10\n",
-      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.0890 - accuracy: 0.9732\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0863 - accuracy: 0.9743\n",
       "Epoch 4/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0667 - accuracy: 0.9802\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0641 - accuracy: 0.9816\n",
       "Epoch 5/10\n",
-      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0516 - accuracy: 0.9844\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0502 - accuracy: 0.9846\n",
       "Epoch 6/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0416 - accuracy: 0.9874\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0390 - accuracy: 0.9880\n",
       "Epoch 7/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0328 - accuracy: 0.9907\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0303 - accuracy: 0.9914\n",
       "Epoch 8/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0258 - accuracy: 0.9923\n",
+      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0244 - accuracy: 0.9924\n",
       "Epoch 9/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0213 - accuracy: 0.9936\n",
+      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0197 - accuracy: 0.9943\n",
       "Epoch 10/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0180 - accuracy: 0.9943\n",
-      "1313/1313 [==============================] - 1s 836us/step - loss: 0.0141 - accuracy: 0.9963\n",
-      "Precisión: 99.63%\n"
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0154 - accuracy: 0.9957\n",
+      "1313/1313 [==============================] - 1s 1ms/step - loss: 0.0116 - accuracy: 0.9969\n",
+      "Precisión: 99.69%\n"
      ]
     }
    ],
@@ -226,6 +228,78 @@
     "# Evaluar la precisión del modelo en los datos de entrenamiento\n",
     "loss, accuracy = model.evaluate(X, y_one_hot)\n",
     "print(f\"Precisión: {accuracy*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Haga un modelo de Deep learning, determine la efectividad del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1050/1050 [==============================] - 2s 1ms/step - loss: 1.5988 - accuracy: 0.6678\n",
+      "Epoch 2/10\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.4819 - accuracy: 0.8785\n",
+      "Epoch 3/10\n",
+      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.3215 - accuracy: 0.9192\n",
+      "Epoch 4/10\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.2437 - accuracy: 0.9359\n",
+      "Epoch 5/10\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1959 - accuracy: 0.9476\n",
+      "Epoch 6/10\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1552 - accuracy: 0.9569\n",
+      "Epoch 7/10\n",
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.1396 - accuracy: 0.9613\n",
+      "Epoch 8/10\n",
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.1145 - accuracy: 0.9676\n",
+      "Epoch 9/10\n",
+      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.1056 - accuracy: 0.9702\n",
+      "Epoch 10/10\n",
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.0833 - accuracy: 0.9757\n",
+      "263/263 [==============================] - 0s 833us/step\n",
+      "Accuracy: 95.9643\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prepare the data\n",
+    "X = data.iloc[:, 1:].values\n",
+    "y = data.iloc[:, 0].values\n",
+    "y = to_categorical(y)\n",
+    "\n",
+    "# Split data into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define the model\n",
+    "model = Sequential()\n",
+    "model.add(Dense(units=128, activation='relu', input_shape=(784,)))\n",
+    "model.add(Dense(units=64, activation='relu'))\n",
+    "model.add(Dense(units=32, activation='relu'))\n",
+    "model.add(Dense(units=10, activation='softmax'))\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=32)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred_proba = model.predict(X_test)\n",
+    "y_pred = np.argmax(y_pred_proba, axis=1)\n",
+    "y_test_class = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test_class, y_pred)\n",
+    "print(f\"Accuracy: {accuracy*100:.4f}\")\n"
    ]
   }
  ],
