--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -175,27 +175,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.2949 - accuracy: 0.9160\n",
+      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.2926 - accuracy: 0.9172\n",
       "Epoch 2/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.1276 - accuracy: 0.9626\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.1298 - accuracy: 0.9626\n",
       "Epoch 3/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0863 - accuracy: 0.9743\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0896 - accuracy: 0.9727\n",
       "Epoch 4/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0641 - accuracy: 0.9816\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0676 - accuracy: 0.9801\n",
       "Epoch 5/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0502 - accuracy: 0.9846\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0514 - accuracy: 0.9848\n",
       "Epoch 6/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0390 - accuracy: 0.9880\n",
+      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0392 - accuracy: 0.9884\n",
       "Epoch 7/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0303 - accuracy: 0.9914\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0312 - accuracy: 0.9900\n",
       "Epoch 8/10\n",
-      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0244 - accuracy: 0.9924\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0240 - accuracy: 0.9929\n",
       "Epoch 9/10\n",
-      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0197 - accuracy: 0.9943\n",
+      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0199 - accuracy: 0.9941\n",
       "Epoch 10/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0154 - accuracy: 0.9957\n",
-      "1313/1313 [==============================] - 1s 1ms/step - loss: 0.0116 - accuracy: 0.9969\n",
-      "Precisión: 99.69%\n"
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0165 - accuracy: 0.9948\n",
+      "1313/1313 [==============================] - 1s 1ms/step - loss: 0.0131 - accuracy: 0.9962\n",
+      "Precisión: 99.62%\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -247,27 +247,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1050/1050 [==============================] - 2s 1ms/step - loss: 1.5988 - accuracy: 0.6678\n",
+      "1050/1050 [==============================] - 3s 2ms/step - loss: 1.5376 - accuracy: 0.7421\n",
       "Epoch 2/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.4819 - accuracy: 0.8785\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.4732 - accuracy: 0.8906\n",
       "Epoch 3/10\n",
-      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.3215 - accuracy: 0.9192\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.3310 - accuracy: 0.9234\n",
       "Epoch 4/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.2437 - accuracy: 0.9359\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.2503 - accuracy: 0.9379\n",
       "Epoch 5/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1959 - accuracy: 0.9476\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1989 - accuracy: 0.9499\n",
       "Epoch 6/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1552 - accuracy: 0.9569\n",
+      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.1691 - accuracy: 0.9570\n",
       "Epoch 7/10\n",
-      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.1396 - accuracy: 0.9613\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1425 - accuracy: 0.9624\n",
       "Epoch 8/10\n",
-      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.1145 - accuracy: 0.9676\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1222 - accuracy: 0.9671\n",
       "Epoch 9/10\n",
-      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.1056 - accuracy: 0.9702\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1103 - accuracy: 0.9710\n",
       "Epoch 10/10\n",
-      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.0833 - accuracy: 0.9757\n",
-      "263/263 [==============================] - 0s 833us/step\n",
-      "Accuracy: 95.9643\n"
+      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.1034 - accuracy: 0.9712\n",
+      "263/263 [==============================] - 0s 823us/step\n",
+      "Accuracy: 95.6310\n"
      ]
     }
    ],
@@ -300,6 +300,96 @@
     "\n",
     "accuracy = accuracy_score(y_test_class, y_pred)\n",
     "print(f\"Accuracy: {accuracy*100:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Haga un modelo con cualquier otro algoritmo que el grupo seleccione, determine la efectividad del modelo\n",
+    "### Elegimos CNN "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "from tensorflow.keras.datasets import mnist\n",
+    "from tensorflow.keras.utils import to_categorical\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11490434/11490434 [==============================] - 2s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el conjunto de datos MNIST\n",
+    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+    "\n",
+    "# Preprocesar los datos\n",
+    "train_images = train_images.reshape((60000, 28, 28, 1)).astype('float32') / 255\n",
+    "test_images = test_images.reshape((10000, 28, 28, 1)).astype('float32') / 255\n",
+    "train_labels = to_categorical(train_labels)\n",
+    "test_labels = to_categorical(test_labels)\n",
+    "# Crear el modelo\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "# Agregar capas convolucionales y de agrupación\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "\n",
+    "# Agregar capas densamente conectadas\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(10, activation='softmax'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "938/938 [==============================] - 19s 20ms/step - loss: 0.0214 - accuracy: 0.9936\n",
+      "Epoch 2/5\n",
+      "938/938 [==============================] - 19s 20ms/step - loss: 0.0160 - accuracy: 0.9945\n",
+      "Epoch 3/5\n",
+      "938/938 [==============================] - 19s 20ms/step - loss: 0.0111 - accuracy: 0.9964\n",
+      "Epoch 4/5\n",
+      "938/938 [==============================] - 20s 21ms/step - loss: 0.0117 - accuracy: 0.9960\n",
+      "Epoch 5/5\n",
+      "938/938 [==============================] - 19s 20ms/step - loss: 0.0088 - accuracy: 0.9969\n",
+      "313/313 [==============================] - 1s 3ms/step - loss: 0.0298 - accuracy: 0.9926\n",
+      "Test accuracy: 99.26000237464905\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "model.fit(train_images, train_labels, epochs=5, batch_size=64)\n",
+    "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
+    "print('Test accuracy:', test_acc*100)\n"
    ]
   }
  ],
