--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -175,27 +175,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.2926 - accuracy: 0.9172\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.2957 - accuracy: 0.9154\n",
       "Epoch 2/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.1298 - accuracy: 0.9626\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.1318 - accuracy: 0.9612\n",
       "Epoch 3/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0896 - accuracy: 0.9727\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.0883 - accuracy: 0.9732\n",
       "Epoch 4/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0676 - accuracy: 0.9801\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.0664 - accuracy: 0.9804\n",
       "Epoch 5/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0514 - accuracy: 0.9848\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.0506 - accuracy: 0.9845\n",
       "Epoch 6/10\n",
-      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0392 - accuracy: 0.9884\n",
+      "1313/1313 [==============================] - 2s 1ms/step - loss: 0.0387 - accuracy: 0.9886\n",
       "Epoch 7/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0312 - accuracy: 0.9900\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0320 - accuracy: 0.9903\n",
       "Epoch 8/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0240 - accuracy: 0.9929\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0236 - accuracy: 0.9930\n",
       "Epoch 9/10\n",
-      "1313/1313 [==============================] - 3s 2ms/step - loss: 0.0199 - accuracy: 0.9941\n",
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0200 - accuracy: 0.9941\n",
       "Epoch 10/10\n",
-      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0165 - accuracy: 0.9948\n",
-      "1313/1313 [==============================] - 1s 1ms/step - loss: 0.0131 - accuracy: 0.9962\n",
-      "Precisión: 99.62%\n"
+      "1313/1313 [==============================] - 2s 2ms/step - loss: 0.0164 - accuracy: 0.9953\n",
+      "1313/1313 [==============================] - 1s 863us/step - loss: 0.0123 - accuracy: 0.9969\n",
+      "Precisión: 99.69%\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -247,27 +247,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1050/1050 [==============================] - 3s 2ms/step - loss: 1.5376 - accuracy: 0.7421\n",
+      "1050/1050 [==============================] - 2s 1ms/step - loss: 1.6918 - accuracy: 0.5631\n",
       "Epoch 2/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.4732 - accuracy: 0.8906\n",
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.5717 - accuracy: 0.8484\n",
       "Epoch 3/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.3310 - accuracy: 0.9234\n",
+      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.2740 - accuracy: 0.9281\n",
       "Epoch 4/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.2503 - accuracy: 0.9379\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1943 - accuracy: 0.9471\n",
       "Epoch 5/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1989 - accuracy: 0.9499\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1590 - accuracy: 0.9555\n",
       "Epoch 6/10\n",
-      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.1691 - accuracy: 0.9570\n",
+      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1351 - accuracy: 0.9624\n",
       "Epoch 7/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1425 - accuracy: 0.9624\n",
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.1142 - accuracy: 0.9674\n",
       "Epoch 8/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1222 - accuracy: 0.9671\n",
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.1010 - accuracy: 0.9730\n",
       "Epoch 9/10\n",
-      "1050/1050 [==============================] - 2s 2ms/step - loss: 0.1103 - accuracy: 0.9710\n",
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.0923 - accuracy: 0.9735\n",
       "Epoch 10/10\n",
-      "1050/1050 [==============================] - 2s 1ms/step - loss: 0.1034 - accuracy: 0.9712\n",
-      "263/263 [==============================] - 0s 823us/step\n",
-      "Accuracy: 95.6310\n"
+      "1050/1050 [==============================] - 1s 1ms/step - loss: 0.0788 - accuracy: 0.9774\n",
+      "263/263 [==============================] - 0s 780us/step\n",
+      "Accuracy: 96.4286\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,38 +324,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 2s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Cargar el conjunto de datos MNIST\n",
-    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+    "# Cargar los datos desde archivos CSV\n",
+    "train_data = pd.read_csv('train.csv')\n",
+    "test_data = pd.read_csv('test.csv')\n",
     "\n",
-    "# Preprocesar los datos\n",
-    "train_images = train_images.reshape((60000, 28, 28, 1)).astype('float32') / 255\n",
-    "test_images = test_images.reshape((10000, 28, 28, 1)).astype('float32') / 255\n",
+    "# Separar las etiquetas y las imágenes\n",
+    "train_labels = train_data.iloc[:, 0].values\n",
+    "train_images = train_data.iloc[:, 1:].values\n",
+    "test_labels = test_data.iloc[:, 0].values\n",
+    "test_images = test_data.iloc[:, 1:].values\n",
+    "\n",
+    "# Reshape y normalizar las imágenes\n",
+    "train_images = train_images.reshape((-1, 28, 28, 1)).astype('float32') / 255\n",
+    "test_images = test_images.reshape((-1, 28, 28, 1)).astype('float32') / 255\n",
+    "\n",
+    "# One-hot encode las etiquetas\n",
     "train_labels = to_categorical(train_labels)\n",
     "test_labels = to_categorical(test_labels)\n",
+    "\n",
     "# Crear el modelo\n",
     "model = models.Sequential()\n",
-    "\n",
-    "# Agregar capas convolucionales y de agrupación\n",
     "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
     "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
     "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
-    "\n",
-    "# Agregar capas densamente conectadas\n",
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(64, activation='relu'))\n",
     "model.add(layers.Dense(10, activation='softmax'))\n"
@@ -363,33 +360,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "938/938 [==============================] - 19s 20ms/step - loss: 0.0214 - accuracy: 0.9936\n",
-      "Epoch 2/5\n",
-      "938/938 [==============================] - 19s 20ms/step - loss: 0.0160 - accuracy: 0.9945\n",
-      "Epoch 3/5\n",
-      "938/938 [==============================] - 19s 20ms/step - loss: 0.0111 - accuracy: 0.9964\n",
-      "Epoch 4/5\n",
-      "938/938 [==============================] - 20s 21ms/step - loss: 0.0117 - accuracy: 0.9960\n",
-      "Epoch 5/5\n",
-      "938/938 [==============================] - 19s 20ms/step - loss: 0.0088 - accuracy: 0.9969\n",
-      "313/313 [==============================] - 1s 3ms/step - loss: 0.0298 - accuracy: 0.9926\n",
-      "Test accuracy: 99.26000237464905\n"
+      "Epoch 1/10\n",
+      "657/657 [==============================] - 13s 19ms/step - loss: 0.0109 - accuracy: 0.9962\n",
+      "Epoch 2/10\n",
+      "657/657 [==============================] - 12s 18ms/step - loss: 0.0081 - accuracy: 0.9973\n",
+      "Epoch 3/10\n",
+      "657/657 [==============================] - 12s 19ms/step - loss: 0.0076 - accuracy: 0.9974\n",
+      "Epoch 4/10\n",
+      "657/657 [==============================] - 12s 18ms/step - loss: 0.0069 - accuracy: 0.9976\n",
+      "Epoch 5/10\n",
+      "657/657 [==============================] - 12s 18ms/step - loss: 0.0054 - accuracy: 0.9982\n",
+      "Epoch 6/10\n",
+      "657/657 [==============================] - 13s 21ms/step - loss: 0.0045 - accuracy: 0.9984\n",
+      "Epoch 7/10\n",
+      "657/657 [==============================] - 13s 20ms/step - loss: 0.0083 - accuracy: 0.9971\n",
+      "Epoch 8/10\n",
+      "657/657 [==============================] - 12s 19ms/step - loss: 0.0037 - accuracy: 0.9989\n",
+      "Epoch 9/10\n",
+      "657/657 [==============================] - 13s 19ms/step - loss: 0.0042 - accuracy: 0.9985\n",
+      "Epoch 10/10\n",
+      "657/657 [==============================] - 12s 19ms/step - loss: 0.0046 - accuracy: 0.9985\n",
+      "1313/1313 [==============================] - 4s 3ms/step - loss: nan - accuracy: 0.1016\n",
+      "Test accuracy: 10.157142579555511\n"
      ]
     }
    ],
    "source": [
+    "# Compilar el modelo\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "model.fit(train_images, train_labels, epochs=5, batch_size=64)\n",
+    "\n",
+    "# Entrenar el modelo\n",
+    "model.fit(train_images, train_labels, epochs=10, batch_size=64)\n",
+    "\n",
+    "# Evaluar el modelo\n",
     "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
-    "print('Test accuracy:', test_acc*100)\n"
+    "print('Test accuracy:', test_acc*100)"
    ]
   }
  ],
